Only missing the offset and last line of myp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "*.embeddedhtml": "html",
     "stdio.h": "c",
     "instruction.h": "c",
-    "utilities.h": "c"
+    "utilities.h": "c",
+    "sys.h": "c"
   },
   "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.cCompilerPath": "gcc",
