--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "stdio.h": "c",
     "instruction.h": "c",
     "utilities.h": "c",
-    "sys.h": "c"
+    "sys.h": "c",
+    "disasm.h": "c"
   },
   "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.cCompilerPath": "gcc",
